test/fail/testAnalyseSyntaxiqueReussie.yak
PROGRAMME testReturn

ENTIER FONCTION test (ENTIER n)
  SI n<=1 ALORS RETOURNE 1+VRAI
  SINON RETOURNE VRAI
  FSI
FFONCTION

PRINCIPAL
VAR ENTIER i;
  i=1+VRAI;
  i=test(5);
  ECRIRE(i);
FPRINCIPAL

FPROGRAMME
